2011-01-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/Handler.tcc: Add sanity checks.

	* include/dmcs/ConflictNotification.h: Add NEXT notification type.
	* include/network/NeighborOut.h: Likewise.
	* src/network/JoinThread.cpp: Likewise.

	* src/dmcs/StreamingDMCS.cpp (StreamingDMCS::work): Not
	implemented yet.

	* include/network/NeighborOut.h: Merge NeighborIn into
	NeighborThread and threadify NeighborOut.
	* include/network/NeighborThread.h: Likewise.

	* include/network/BaseStreamer.h: Remove.
	* include/network/Makefile.am: Likewise.
	* include/network/NeighborIn.h: Likewise.

	* include/mcs/BeliefState.h: Add operator=.

	* include/dmcs/StreamingBackwardMessage.h: Typo.
	* include/network/JoinThread.h: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.

	* examples/diamond.opt: Fix epsilon bit in V.

	* testsuite/Makefile.am (testInterfaceRelSat_LDADD): Add libdmcs.a

	* include/network/JoinThread.h: Use PODs as thread parameters and implement shutdown.
	* include/network/Handler.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/NeighborIn.h: Likewise.
	* include/network/NeighborOut.h: Likewise.
	* include/network/NeighborThread.h: Likewise.
	* include/network/OutputThread.h: Likewise.
	* include/network/RouterThread.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/network/StreamingDMCSThread.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/network/StreamingDMCSThread.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.
	* testsuite/testInterfaceRelSat.cpp: Likewise.
	* testsuite/testJoinThread.cpp: Likewise.

	* include/network/ConcurrentMessageQueue.h: Add copy ctor.